Feat: code button sticker

--- a/message.html
+++ b/message.html
@@ -1166,9 +1166,12 @@
 												</div>
 												<div>
 													
-													<button type="button" class="btn"><img src="images/feliz.png"></i></button>
+													<button type="button" class="btn"><img src="images/feliz.png">
+													</i></button>
 
-													<button type="button" class="btn"><i class="fas fa-paperclip scale5 text-primary"></i></button>
+													<button type="button" class="btn"><i class="fas fa-paperclip scale5 text-primary"></i>
+													</button>
+													
 
 													<button type="button" class="btn"><img src="images/pegatina.png"></i></button>
 
